--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,30 +1,17 @@
 name: ci-java-maven-workflow
 on: ["push"]
 jobs:
-  build:
+  unit-tests:
     runs-on: ubuntu-latest
   
-  steps:
-    - uses: actions/checkout@v5
+    steps:
+      - uses: actions/checkout@v5
 
-    - name: Set up JDK 21
-      uses: actions/setup-java@v5
-      with:
-        java-version: '21'
-        distribution: 'zulu'
+      - name: Set up JDK 21
+        uses: actions/setup-java@v5
+        with:
+          java-version: '21'
+          distribution: 'zulu'
 
-    - name: Build and Test 
-      run: mvn -B package --file pom.xml
-
-    - name: Unit Tests
-      run: mvn test
-
-    - name: Verify artifacts
-      run: |
-        if [ -d "target" ]; then
-          echo "Build artifacts created successfully"
-          ls -la target/*.jar 2>/dev/null || echo "No JAR files found"
-        else
-          echo "ERROR: Target directory not found"
-          exit 1
-        fi
+      - name: Unit Tests
+        run: mvn test
