--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,10 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.3.0</version>
+          <configuration>
+            <printSummary>true</printSummary>
+            <reportFormat>brief</reportFormat>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
